bk_ida/gccida/g1/restore_line_notes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1708:4: error: expected ';' after expression
rtx v4; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1708:5: error: use of undeclared identifier 'v4'
rtx v4; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1711:4: error: expected ';' after expression
rtx line_note; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1711:5: error: use of undeclared identifier 'line_note'
rtx line_note; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1714:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1714:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1720:1: error: use of undeclared identifier 'v4'
v4 = head; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1723:17: error: use of undeclared identifier 'v4'
if ( *( _WORD *)v4 == 37 && v4[2].fld[0].rtint > 0 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1723:29: error: use of undeclared identifier 'v4'
if ( *( _WORD *)v4 == 37 && v4[2].fld[0].rtint > 0 ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1725:1: error: use of undeclared identifier 'v4'
v4 = ( rtx)v4[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1727:9: error: use of undeclared identifier 'v4'
while ( v4 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1731:1: error: use of undeclared identifier 'v4'
v4 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1741:1: error: use of undeclared identifier 'v4'
v4 = v2; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1748:1: error: use of undeclared identifier 'line_note'
line_note = h_i_d[rtint].line_note; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1749:6: error: use of undeclared identifier 'line_note'
if ( line_note != v4 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1749:19: error: use of undeclared identifier 'v4'
if ( line_note != v4 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1750:4: error: use of undeclared identifier 'line_note'
&& line_note 
   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1751:13: error: use of undeclared identifier 'line_note'
&& ( !v4 || line_note[2].fld[0].rtint != v4[2].fld[0].rtint || line_note[2] != v4[2]) ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/haifa-sched.c:1751:42: error: use of undeclared identifier 'v4'
&& ( !v4 || line_note[2].fld[0].rtint != v4[2].fld[0].rtint || line_note[2] != v4[2]) ) 
                                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/restore_line_notes/src/obj/haifa-sched.o] Error 1
